parser/tests/cases/snapshots/cases__errors__contract_field_after_def.snap
---
source: parser/tests/cases/errors.rs
expression: err

---
error: contract field definitions must come before any function or event definitions
  ┌─ contract_field_after_def:5:3
  │
5 │   x: u8
  │   ^^^^^


